@@ -10,6 +10,9 @@ Version 0.24 (2009-05-08)
   * changed: Key bindings of `geben-show-backtrace is also assigned to `t'.
   * fixed: Even if you unset a breakpoint successfully in the current
            session, it was not removed from the persist storage.
+  * fixed: With Komodo's Perl Debugging Extension, GEBEN possibly
+                caused an internal error when user attempted to set a
+                lineno breakpoint at a blank line.
 
 Version 0.23 (2009-02-25)
 
